port: target Forge 1.20.1 against the 1.20.1 refactor branches
Ports the addon from NeoForge 1.21.1 / Java 21 to Forge 47.1.x on Minecraft
1.20.1 / Java 17, consuming AE2 15.4.10 plus the
refactor/thunderbolt-three-layer-clean-1.20.1 builds of AE2 Lightning Tech
(2.1.0-beta.1) and Thunderbolt Core (2.0.0-beta.1). Both dependency lines already
share the refactored overload contract with the 1.21.1 branch, so this change is
confined to the platform layer.

Build:
- ForgeGradle 6 + mixingradle replace the NeoGradle moddev plugin; Gradle stays
  at 8.8 and the toolchain drops to Java 17.
- AE2LT and Thunderbolt resolve from mavenLocal through fg.deobf.
- AE2WTLib 1.20.1 mandates Architectury and Cloth Config, so both join the
  development runtime.
- Third-party integration mods move behind -Penable_integration_runtime; the
  adapters are reflection-only and never needed to compile.
- AE2's access transformer is vendored under gradle/dev for run tasks only,
  because Forge ignores transformers inside dependency mod jars in development.

Platform:
- Registries move to DeferredRegister/RegistryObject; capability exposure moves
  from RegisterCapabilitiesEvent to the block entity, since AE2 1.20.1 resolves
  IN_WORLD_GRID_NODE_HOST by instanceof and GENERIC_INTERNAL_INV through
  getCapability.
- Screens register during FMLClientSetupEvent, and the packaged-core renderer is
  published by the items themselves via Item#initializeClient.
- Block interaction collapses into AE2's single onActivated hook.
- NBT persistence drops the HolderLookup.Provider parameter, memory-card settings
  travel as CompoundTag instead of a DataComponentMap, and ItemStack round-trips
  through save/of.
- Recipe types map to their 1.20.1 shapes: no RecipeHolder wrapper, Container in
  place of RecipeInput, CraftingContainer for CraftingInput, and array-based
  IPatternDetails outputs.
- 1.21-only AE2 names are remapped (AENetworkBlockEntity, MenuLocator,
  AEKeyFilter, appeng.capabilities.Capabili